# geobishtu

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  meson.build
.cache/clangd/index/: geobishtu.c.0A3DC1FFB1FE5003.idx  geobishtu.cpp.E1B7C0768258BDED.idx
config/: GeobishtuConfig.h.in
data/: Readme.txt  hotosm_aus_railways_lines_shp.shx
include/: ShapeFile.hpp  Util.hpp
include/ShapeFile/: ShapeFile.hpp
include/ShapeFile/Exceptions/: ShapeFileReadError.hpp
include/ShapeFile/Record/: MultiPoint.hpp  Point.hpp  PolyLine.hpp  Record.hpp
src/: MultiPoint.cpp  Point.cpp  PolyLine.cpp  Record.cpp  ShapeFile.cpp  ShapeFileReadError.cpp
tests/: CMakeLists.txt  geobishtu_test.cpp
